# iNatInq

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  MAINTAINERS.md  README.md  pyproject.toml
apps/: .dockerignore  Makefile  README.md  pyproject.toml
apps/charts/: README.md  ingestion-engine-flowchart.md  ingestion-engine-sequence.md  query-engine-flowchart.md  query-engine-sequence.md
apps/docs/: BACKLOG_IMAGE_PIPELINE.md
apps/postman/: README.md  iNatInq-Local.postman_environment.json  iNatInq-Pipeline-API.postman_collection.json
apps/scripts/: dev_run.sh  set-pythonpath.sh
apps/src/: config.py  main.py
apps/src/api/: README.md  __init__.py  app.py  models.py  routes.py
apps/src/api/middleware/: README.md  __init__.py  exception_handler.py  healthz_filter.py  logger.py
apps/src/clients/: README.md  __init__.py  base.py  clip.py  k8s_spark.py  mixins.py  ollama.py  qdrant.py  registries.py  s3.py  weaviate.py
apps/src/clients/interfaces/: README.md  __init__.py  embedding.py  vector_db.py
apps/src/core/: README.md  __init__.py  exceptions.py  models.py
apps/src/core/ingestion/: __init__.py  checkpoint.py  image_utils.py
apps/src/core/ingestion/databricks/: __init__.py  process_s3_to_qdrant.py  processing.py  rate_limiter.py  run_ingest.py
apps/src/core/ingestion/interfaces/: __init__.py  factories.py  operations.py  pipeline.py  types.py
apps/src/core/ingestion/ray/: __init__.py  image_processing.py  process_s3_images.py  process_s3_to_qdrant.py  processing.py  rate_limiter.py  ray_cluster.py
apps/src/core/ingestion/spark/: __init__.py  load_local_to_s3.py  process_s3_to_qdrant.py  processing.py  spark_config.py
apps/src/core/services/: README.md  __init__.py  databricks_ray_service.py  ray_service.py  search_service.py  spark_service.py
apps/src/foundation/: README.md  __init__.py  async_utils.py  circuit_breaker.py  exceptions.py  http.py  logger.py  rate_limiter.py  retry.py
apps/syntheticdata/: .gitignore  README.md  synthetic_data.py
apps/tests/: conftest.py
apps/tests/integration/: README.md  __init__.py  conftest.py
apps/tests/integration/clients/: __init__.py  conftest.py  test_clip.py  test_databricks.py  test_ollama.py  test_qdrant.py  test_s3.py  test_weaviate.py
apps/tests/unit/: test_config.py
apps/tests/unit/api/: conftest.py  test_app.py  test_models.py  test_routes.py
apps/tests/unit/api/middleware/: conftest.py  test_exception_handler.py  test_healthz_filter.py  test_logger.py
apps/tests/unit/clients/: __init__.py  conftest.py  test_clip.py  test_interfaces.py  test_ollama.py  test_qdrant.py  test_registries.py  test_s3.py  test_weaviate.py
apps/tests/unit/core/: test_checkpoint.py  test_models.py
apps/tests/unit/core/ingestion/: __init__.py  (+1 more)
apps/tests/unit/foundation/: test_circuit_breaker.py  test_http.py  test_logger.py  test_rate_limiter.py  test_retry.py
apps/tests/unit/services/: __init__.py  conftest.py  test_databricks_ray_service.py  test_ray_service.py  test_search_service.py  test_spark_service.py
apps/zarf/: README.md
apps/zarf/compose/: README.md
apps/zarf/compose/dev/: docker-compose.yaml  env.local.example  pipeline.env
apps/zarf/docker/: README.md
apps/zarf/docker/base/: Dockerfile.pipeline-base
apps/zarf/docker/dev/: Dockerfile.pipeline
apps/zarf/scripts/: init-minio.sh  providers_health.sh  smoke_providers.py  smoke_providers.sh
iNatInqPerf/: .gitignore  README.md  pyproject.toml
iNatInqPerf/configs/: inquire_benchmark.yaml  inquire_benchmark_milvus.yaml  inquire_benchmark_qdrant.yaml  inquire_benchmark_qdrant_cluster.yaml  inquire_benchmark_weaviate.yaml  inquire_benchmark_weaviate_async.yaml  inquire_benchmark_weaviate_cluster.yaml  inquire_inat_5m.yaml  inquire_inat_5m_faiss.yaml  inquire_inat_5m_milvus.yaml  inquire_inat_5m_qdrant.yaml  inquire_inat_5m_weaviate.yaml  inquire_test.yaml
iNatInqPerf/docs/: SparkProcessing.md
iNatInqPerf/scripts/: run_baseline_benchmark.py  run_benchmark.py  vector_database_ops.py
iNatInqPerf/spark/: README.md  __init__.py  benchmark_spark.py  run_benchmark_spark.py
iNatInqPerf/src/inatinqperf/: configuration.py  container.py
iNatInqPerf/src/inatinqperf/adaptors/: __init__.py  base.py  faiss_adaptor.py  milvus_adaptor.py  qdrant_adaptor.py  utils.py  weaviate_adaptor.py  weaviate_async_adaptor.py
iNatInqPerf/src/inatinqperf/benchmark/: __init__.py  baseline.py  benchmark.py  configuration.py  inquire_queries.txt
iNatInqPerf/src/inatinqperf/utils/: __init__.py  embed.py  profiler.py
iNatInqPerf/tests/: conftest.py  test_benchmark.py  test_configuration.py  test_embed.py  test_faiss_adaptor.py  test_milvus_adaptor.py  test_profiler.py  test_qdrant_adaptor.py  test_vector_database.py  test_vector_database_ops.py  test_weaviate_adaptor.py
iNatInqPerf/tests/fixtures/: baseline_results.npy  baseline_results_post_update.npy  inquire_benchmark_small.yaml  inquire_milvus.yaml  inquire_qdrant.yaml  inquire_test.yaml  inquire_weaviate.yaml
iNatInqPerf/tests/vectordbs/: test_qdrant.py  test_weaviate.py
inat_toolkit/: .gitignore  README.md  pyproject.toml
inat_toolkit/inat_toolkit/: __init__.py  database.py  embed.py  image.py
inat_toolkit/scripts/: generate_dataset.py  load_embeddings_to_postgres_db.py  setup_database_from_huggingface.py
inat_toolkit/tests/: conftest.py  test_database.py  test_embed.py  test_image.py
inquire_api/: .env  .gitignore  pyproject.toml  taxa_response_example.json
inquire_api/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
inquire_api/frontend/src/: App.css  constants.ts  utils.ts
inquire_api/frontend/src/components/: autocomplete.tsx  badge.tsx  banner.tsx  buttons.tsx
inquire_api/frontend/src/interfaces/: api.ts  image.ts  location.ts
inquire_api/inquire_api/: __init__.py  config.py  container.py  main.py  models.py  routes.py  vector_db.py
inquire_api/scripts/: convert_from_inquire_dataset.py  migrate_vector_db.py  setup_database_from_huggingface.py
inquire_api/tests/: conftest.py  test_api.py  test_vector_db.py
(+39 files in other folders)
