[project]
name = "apps"
version = "0.0.0"
description = "Foundation utilities for shared infrastructure components"
readme = "src/foundation/README.md"
authors = [
    { name = "Varun Agrawal", email = "varunagrawal@gatech.edu" },
    { name = "Ketan Bhardwaj", email = "ketanbj@cc.gatech.edu" },
]
requires-python = ">= 3.11, < 3.13"

dependencies = [
    "attrs>=25.4.0",
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "kubernetes>=31.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pybreaker>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyspark>=3.5.0",
    "qdrant-client>=1.15.1",
    "ray[default]>=2.53.0",
    "requests>=2.31",
    "tenacity>=8.3.0",
    "uvicorn>=0.32.0",
    "weaviate-client>=4.9.3",
]

classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]

[project.license]
text = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.5.0",
    "testcontainers[minio,qdrant]>=4.10.0",
]

[tool.pytest.ini_options]
addopts = "--verbose -vv --capture=no --cov=foundation --cov-report html --cov-report term --cov-report xml:coverage.xml --cov-fail-under=70.0"
testpaths = ["tests"]
norecursedirs = []
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require Docker)",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
exclude = ["tests/**"]

select = ["ALL"]

ignore = [
    "ANN001", # Missing type annotation for function argument
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special method `__init__`
    "ANN401", # Dynamically typed expressions (typing.Any)
    "ARG002", # Unused method argument
    "ARG003", # Unused class method argument
    "ARG004", # Unused static method argument
    "BLE001", # Do not catch blind exception: `Exception`
    "B905", # `zip()` without an explicit `strict=` parameter
    "C901", # Function is too complex
    "G201", # Logging `.exception(...)` should be used instead of `.error(..., exc_info=True)`
    "COM812", # Trailing comma missing
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__` method
    "D202", # No blank lines allowed after function docstring
    "D203", # Incorrect blank line before class
    "D213", # Multi line summary second line
    "D417", # Missing argument descriptions in the docstring
    "E501", # Line too long
    "EM101", # Separate message assignment for exception
    "EM102", # Exception must not use an f-string literal
    "FIX002", # Line contains TODO, consider resolving the issue
    "I001", # Import block is un-sorted or un-formatted
    "N802", # Function name `xxx` should be lowercase
    "N999", # Invalid module name
    "PERF403", # Use a dictionary comprehension instead of a for-loop
    "PLC0415", # Import should be at the top-level of a file
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments in function definition
    "PTH110", # `os.path.exists()` should be replaced by `Path.exists()`
    "PTH123", # `open()` should be replaced by `Path.open()`
    "RSE102", # Unnecessary parentheses on raise exception
    "S101", # Use of assert detected
    "S104", # Possible binding to all interfaces (intentional for Spark)
    "S108", # Probable insecure usage of temporary file or directory
    "SLF001", # Private member accessed (intentional for cleanup)
    "TC006", # Add quotes to type expression in `typing.cast()`
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link for this TODO
    "TRY002", # Create your own exception
    "TRY003", # Avoid specifying long messages outside the exception class
    "TRY300", # Consider moving this statement to an `else` block
    "TRY301", # Abstract `raise` to an inner function
    "UP032", # Use f-string instead of `format` call
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "D100", "D103", "INP001", "PLR2004", "N803"]
"syntheticdata/*" = ["T201", "EXE001", "INP001"]  # CLI scripts use print(), shebang optional

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 20

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src/foundation"]

[tool.uv.build-backend]
module-name = "foundation"

