[project]
name = "inatinqperf"
version = "0.0.0" 
#          ^^^^^
# Wheel names will be generated according to this value. Do not manually modify this value; instead
# update it according to committed changes by running this command from the root of the repository:
#
#   uv run python -m AutoGitSemVer.scripts.UpdatePythonVersion ./pyproject.toml ./src

description = "iNatInqPerf is a benchmark implemented to evalaute performance vs. cost trade-offs of running NLP based search (like INQUIRE) in a platform with different vectorDBs (like iNaturalist)."
readme = "README.md"
authors = [
    { name = "Ketan Bhardwaj", email = "ketanbj@cc.gatech.edu" }
]
requires-python = ">= 3.11"
dependencies = [
    "pandas>=1.5",
    "psutil>=5.9",
    "huggingface-hub>=0.23",
    "safetensors>=0.4",
    "torchvision>=0.23",
    "faiss-cpu>=1.12.0",
    "pyyaml>=6.0",
    "codetiming>=1.4",
    "requests>=2.31",
    "tabulate>=0.9.0",
    "pymilvus>=2.6.3",
    "weaviate-client>=4.17.0",
    "simpleeval>=1.0.3",
    "datasets>=4.4.1",
    "loguru>=0.7.3",
]

classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]

[dependency-groups]
dev = [
    "autogitsemver>=0.9.2",
    "py-spy>=0.4.1",
    "pytest-mock>=3.15.1",
]

[project.license]
text = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--verbose -vv --capture=no --cov=inatinqperf --cov-report html --cov-report term --cov-report xml:coverage.xml --cov-fail-under=70.0"
norecursedirs = [
    "tests/vectordbs",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
exclude = ["tests/**"]

select = ["ALL"]

ignore = [
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "BLE001", # Do not catch blind exception: `Exception`
    "B905", # `zip()` without an explicit `strict=` parameter
    "BLE001", # Do not catch blind exception: `Exception`
    "COM812", # Trailing comma missing
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__` method
    "D202", # No blank lines allowed after function docstring
    "D203", # Incorrect blank line before class
    "D213", # Multi line summary second line
    "EM101", # Separate message assignment for exception
    "FIX002", # Line contains TODO, consider resolving the issue
    "G004", # Logger uses f string
    "N802", # Function name `xxx` should be lowercase
    "N999", # Invalid module name
    "S101", # Use of assert detected
    "TC006", # Add quotes to type expression in `typing.cast()`
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link for this TODO
    "TRY002", # Create your own exception
    "TRY003", # Avoid specifying long messages outside the exception class
    "TRY300", # Consider moving this statement to an `else` block
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 20

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.build-backend]
module-name = "inatinqperf"
